# CDV710QPT_SDK

./: .gitignore  GitHubDesktop-linux-3.1.7-linux1.deb  README.md
indoor/app/: make.sh  test.xml
indoor/app/include/common/: commax_websocket.h  pwm_ctrl.h  sat_https.h  sat_ipcamera.h  sat_linphone_event.h  (+6 more)
indoor/app/layout/: laout_setting_frame_night_mode.c  layout_alarm.c  layout_alarm.h  layout_alarm_common.c  layout_alarm_list.c  layout_alarm_list.h  layout_always_record.c  layout_always_recordbp.c  layout_app_integration.c  layout_away.c  layout_away.h  layout_away_count.c  layout_away_count.h  layout_buzzer_call.c  layout_cctv_registered.c  layout_cctv_search.c  layout_cctv_search_display.c  layout_cctv_serch_input.c  layout_close.c  layout_define.h  layout_door_camera_edit.c  layout_door_camera_password_input.c  layout_door_camera_registed.c  layout_door_camera_registed.h  layout_door_camera_search.c  layout_door_camera_search_display.c  layout_emergency_setting.c  layout_emergency_setting.h  layout_factory_reset.c  layout_frame_show.c  layout_home.c  layout_home.h  layout_intercom_call.c  layout_intercom_call.h  layout_intercom_talk.c  layout_ipc_camera.h  layout_ipc_camera_display.c  layout_ipc_camera_edit.c  layout_ipc_camera_input.c  layout_ipc_camera_register.c  (+84 more)
indoor/app/share/xls/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  config.h  endian.c  ole.c  xls.c  xls.h  xlstool.c
indoor/app/share/xls/libxls/libxls/: ole.h
indoor/测试反馈/: CIP-70QPT_Test_20230919_R1 (eng).xlsx
outdoor/app/: SAT_ANYKA3918OS  daemon_server  make.sh
(+223 files in other folders)
